--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ images/.DS_Store
 *.ipynb
 images/input/.DS_Store
 images/.DS_Store
+data/predictor_68.dat
+.DS_Store
+*.jpg
+images/output/set_1/averages/Icon
+images/output/set_1/averages/Icon
+images/output/set_1/averages/Icon
+*.avi
