--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,9 @@
-
-images/.DS_Store
 *.pyc
-.DS_Store
 *.png
 *.ipynb
-images/input/.DS_Store
-images/.DS_Store
 data/predictor_68.dat
-.DS_Store
 *.jpg
-images/output/set_1/averages/Icon
-images/output/set_1/averages/Icon
-images/output/set_1/averages/Icon
+*Icon
 *.avi
-.DS_Store
-.DS_Store
-data/predictor_68.dat
-eternal-face/eternal-face.yaml
-images/.DS_Store
-images/input/.DS_Store
+*.DS_Store
+*.yaml
